Gallery "jump" removed (scrollbar issue)

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,11 +12,12 @@
 }
 
 .hide-scroll-bar:hover::-webkit-scrollbar {
-  display: initial;
+  width: 8px;
 }
 
 .hide-scroll-bar:hover::-webkit-scrollbar-thumb {
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 4px;
 }
 
 .hide-scroll-bar:hover::-webkit-scrollbar-track {
